# odoo25

./: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.js
api/: .gitignore  compose.yaml  config.toml  pyproject.toml  requirements.txt
api/app/: config.py  database.py  lifespan.py  logging.py  main.py  middleware.py  migrations.py  minio.py  sentry.py  server.py
api/app/base/: config.py  exception_handler.py  exceptions.py  schemas.py
api/app/categories/: controller.py  exceptions.py  models.py  repository.py  service.py
api/app/categories/migrations/: 202508110640_initial.py
api/app/customers/: controller.py  exceptions.py  models.py  repository.py  service.py
api/app/customers/migrations/: 202508110629_initial.py
api/app/deliveries/: controller.py  exceptions.py  models.py  repository.py  service.py
api/app/deliveries/migrations/: 202508110807_initial.py
api/app/delivery_partner/: controller.py  exceptions.py  models.py  repository.py  service.py
api/app/delivery_partner/migrations/: 202508110636_initial.py
api/app/orders/: controller.py  exceptions.py  models.py  repository.py  service.py
api/app/orders/migrations/: 202508110732_initial.py
api/app/products/: controller.py  exceptions.py  models.py  repository.py  service.py
api/app/products/migrations/: 202508110646_initial.py
api/app/shop_owner/: controller.py  exceptions.py  models.py  repository.py  service.py
api/app/users/: controller.py  dependency.py  exceptions.py  models.py  repository.py  service.py
api/app/utils/: argon2.py  paseto.py
(+66 files in other folders)
