[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Dhwanil Shah", email = "itzdhwanil@gmail.com" }
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "granian>=2.5.0",
    "miniopy-async>=1.21.3",
    "orjson>=3.11.1",
    "phonenumbers>=9.0.10",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "pyseto>=1.8.4",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sentry-sdk[fastapi]>=2.34.1",
    "structlog>=25.4.0",
    "uuid-utils>=0.11.0",
    "uvloop>=0.21.0",
]

[build-system]
requires = ["uv_build>=0.7.3,<0.8"]
build-backend = "uv_build"

[project.scripts]
migrations = "app.migrations:run_cli"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
